Fixed vertical-align in stats summary table.  (Now all text vertical aligns to the top, so it looks more uniform / easier on the eyes.)

--- a/www/index.css
+++ b/www/index.css
@@ -60,10 +60,6 @@ table.center
     padding-top: 4px;
     padding-bottom: 4px;
     font-weight: normal;
-}
-
-#energystats tbody #trhead th
-{
     vertical-align: top;
 }
 
@@ -74,14 +70,12 @@ table.center
 
 #energystats tbody #tr24 td
 {
-    vertical-align: top;
     border-top: 2px solid black;
     border-bottom: 1px solid black;
 }
 
 #energystats tbody #trtot td
 {
-    vertical-align: top;
     border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
